Closed
Bug 1470944
Opened 7 years ago
Closed 7 years ago
Crash when running mse changeType wpt
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Tracking
()
VERIFIED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox63 | --- | verified |
People
(Reporter: jya, Assigned: jya)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
STR:
Set media.mediasource.experimental.enabled
Go to http://w3c-test.org/media-source/mediasource-changetype.html
crash
null deref
Now bug 1470814 fixed that issue, but there's still problem in the ordering of tasks.
Assignee | ||
Updated•7 years ago
|
Comment 1•7 years ago
|
||
Re-creating a new demuxer is fine, provided that the SourceBufferResource exists. However, a resource is only created upon receiving an init segment.
The segment following a call to changeType() must be an init segment, will let the demuxer creation occurs there.
Comment 2•7 years ago
|
||
Comment on attachment 8987581 [details]
Bug 1470944 - Don't attempt to create a new demuxer upon changeType call
Bryce Van Dyk (:bryce) has approved the revision.
https://phabricator.services.mozilla.com/D1812
Attachment #8987581 -
Flags: review+
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7ff64c686d51
Don't attempt to create a new demuxer upon changeType call r=bryce
Comment 4•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Updated•7 years ago
|
Assignee: nobody → jyavenard
Updated•6 years ago
|
Flags: qe-verify+
Comment 5•6 years ago
|
||
I have managed to reproduce this issue using Firefox 63.0a1 (BuildId:20180625220119) on Windows 10 64bit.
This issue is verified fixed using Firefox 63.0b7 (BuildId:20180917143811) on Windows 10 64bit, macOS 10.13.6 and Ubuntu 16.04 64bit.
You need to log in
before you can comment on or make changes to this bug.
Description
•